# rules_packager

./: .gitignore  .gitmodules  DRIVERS_REGISTRY.md  README.md  drivers_registry.json  drivers_registry.local.json.example  generate_all.bat  make_rules_index.bat  pyproject.toml
src/rules_packager/: driver_links.py
src/rules_packager/rules/0.1.0/: LLM Automated Test Code Generation Gui.md  Result_API_Contract_v1.md  Test_Helpers_API_Contract_v1.md  test_rules_llm_ready.md
src/rules_packager_base/: Result.py  driver_links.py  test_helpers.py
src/rules_packager_base/rules/: rules_index.json
src/rules_packager_base/rules/0.1.0/: LLM Automated Test Code Generation Gui.md  Test_Helpers_API_Contract_v1.md
src/rules_packager_base/rules/0.1.1/: LLM Automated Test Code Generation Gui.md  Result_API_Contract_v1.md  test_rules_llm_ready.md
src/test_procedure_generation/: __init__.py
src/test_procedure_generation/rules/: rules_index.json
src/test_procedure_generation/rules/0.1.0/: LLM Automated Test Code Generation Gui.md  Result_API_Contract_v1.md  Test_Helpers_API_Contract_v1.md  test_rules_llm_ready.md
tools/: generate_all.py  make_rules_index.py
