[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-packager"
version = "0.1.0"
description = "Rules packager helpers and LLM rule documents"
requires-python = ">=3.10"
authors = [{ name = "Adrien Lombet" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rules_packager = [
  "rules/*/*",
  "rules/rules_index.json",
]
