[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-packager-base"
version = "0.1.0"
description = "Base runtime helpers and LLM rule documents"
requires-python = ">=3.10"
authors = [{ name = "Adrien Lombet" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rules_packager_base = [
  "rules/*/*",
  "rules/rules_index.json",
]
